fix(HardSkills, Projects): adjust layout and overflow properties for better responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
   color: white;
   font-family: "Roboto", sans-serif;
   overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .priColor {
